<resources>
    <string name="app_name">Thirty</string>
    <string name="roll">Roll</string>
    <string name="endRound">End Round</string>
    <string name="dice">DICE</string>
    <string name="youScored">Your Scores</string>
    <string name="startRound">Round:  1</string>
    <string name="startThrow">Throws: 0</string>
    <string name="rulesForScoring">Remember to save dice in pairing order</string>
    <string name="playAgain">Play Again</string>
    <string name="defaultScore">0</string>
    <string-array name="Thirty_choices">
        <item>Low</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <!--Default strings displayed on scorescreen-->
    <string name="low">Low</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="zero">0</string>
</resources>