<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/Throw"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:text="@string/startThrow"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.593" />

        <TextView
            android:id="@+id/Round"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:text="@string/startRound"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Throw"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_Roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/roll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_endRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/endRound"
            app:backgroundTint="#BC0000"
            app:layout_constraintBottom_toTopOf="@+id/button_Roll"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/spinner_choices"
            android:layout_width="166dp"
            android:layout_height="41dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/dice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_Roll"
            app:layout_constraintHorizontal_bias="0.896"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/Dice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/white1" />

        <ImageView
            android:id="@+id/Dice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/dice"
            app:layout_constraintBottom_toBottomOf="@+id/Dice1"
            app:layout_constraintStart_toEndOf="@+id/Dice1"
            app:layout_constraintTop_toTopOf="@+id/Dice1"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/white2" />

        <ImageView
            android:id="@+id/Dice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/dice"
            app:layout_constraintBottom_toBottomOf="@+id/Dice2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/Dice2"
            app:layout_constraintTop_toTopOf="@+id/Dice2"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/white3" />

        <ImageView
            android:id="@+id/Dice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dice"
            app:layout_constraintStart_toStartOf="@+id/Dice1"
            app:layout_constraintTop_toBottomOf="@+id/Dice1"
            app:srcCompat="@drawable/white4" />

        <ImageView
            android:id="@+id/Dice5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dice"
            app:layout_constraintStart_toStartOf="@+id/Dice2"
            app:layout_constraintTop_toBottomOf="@+id/Dice2"
            app:srcCompat="@drawable/white5" />

        <ImageView
            android:id="@+id/Dice6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/Dice3"
            app:layout_constraintTop_toBottomOf="@+id/Dice3"
            app:srcCompat="@drawable/white6" />

        <TextView
            android:id="@+id/saveDices"
            android:layout_width="278dp"
            android:layout_height="22dp"
            android:text="@string/rulesForScoring"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/Throw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Dice5"
            app:layout_constraintVertical_bias="0.471" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>